# LA_CSA_project

./: CMakeLists.txt  README.md  conf.txt  conf1.txt  helper_functions.cpp  helper_functions.h  main.cpp  matrix.cpp  matrix.h  matrix_operations.cpp  matrix_operations.h  vector_operations.cpp  vector_operations.h
ctpl/: example.cpp
headers/: helper_functions.h  matrix.h  matrix_operations.h  parallel_matrix_operations.h  parallel_vector_operations.h  vector_operations.h
helper_functions/: helper_functions.cpp  helper_functions.h
simd/: simd_matrix.cpp  simd_matrix.h
src/: matrix_operations.cpp  parallel_matrix_operations.cpp  parallel_vector_operations.cpp  vector_operations.cpp
tests/: test_matrix.cpp  test_matrix.h  test_matrix_operations.cpp  test_matrix_operations.h  test_vector_operations.cpp
wrapper_class/: matrix.cpp
